# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import casesRouter from "./cases";
+import consultationsRouter from "./consultations";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(casesRouter);
+router.use(consultationsRouter);
 
 export default router;
